Update team name

--- a/HandwritingDetector_proposal_assignment1.ipynb
+++ b/HandwritingDetector_proposal_assignment1.ipynb
@@ -34,10 +34,10 @@
     "\n",
     "<ul>\n",
     "<li style=\"color:maroon\"><h4><bf>Ethan Homan</bf></h4></li>\n",
-    "<li style=\"color:maroon\"><h4><bf>Team member first name and last name</bf></h4></li>\n",
-    "<li style=\"color:maroon\"><h4><bf>Team member first name and last name</bf></h4></li>\n",
-    "<li style=\"color:maroon\"><h4><bf>Team member first name and last name</bf></h4></li>\n",
-    "<li style=\"color:maroon\"><h4><bf>Team member first name and last name</bf></h4></li>\n",
+    "<li style=\"color:maroon\"><h4><bf>Junghwan Bae</bf></h4></li>\n",
+    "<li style=\"color:maroon\"><h4><bf>Harshit Bhatta</bf></h4></li>\n",
+    "<li style=\"color:maroon\"><h4><bf>Sagar Basavaraju</bf></h4></li>\n",
+    "<!-- <li style=\"color:maroon\"><h4><bf>Flynn House</bf></h4></li> -->\n",
     "</ul>"
    ]
   },
