Update the journal, informal source and task

--- a/HandwritingDetector_proposal_assignment1.ipynb
+++ b/HandwritingDetector_proposal_assignment1.ipynb
@@ -114,41 +114,41 @@
     "        <li><h5>Evaluation Ideas: Evaluate the effectiveness of the neural network models on datasets like the MNIST dataset for handwritten digits and the IAM Handwriting Database for mixed script handwriting. Performance metrics could include accuracy, precision, recall, and the F1 score across different tests.</h5>  </li>\n",
     "        <li><h5>Ideas the Team Would Like to Use From This Paper: LSTM networks to enhance the learning process for handwriting recognition. </h5>  </li>\n",
     "    </ul>\n",
-    "<li style=\"color:maroon\"><h4><bf>Paper reference in IEEE or ACM format, citations</bf></h4></li>\n",
+    "<li style=\"color:maroon\"><h4><bf>Yann LeCun, Léon Bottou, Yoshua Bengio, and Patrick Haffner. 1998. Gradient-based learning applied to document recognition. Proceedings of the IEEE, 86 (11), pp. 2278-2323. https://doi.org/10.1109/5.726791, 41,021 citations (Scopus).</bf></h4></li>\n",
     "    <ul>\n",
-    "        <li><h5>Problem:</h5>  </li>\n",
-    "        <li><h5>Past Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Authors' Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Future Promising Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Evaluation Ideas:</h5>  </li>\n",
-    "        <li><h5>Ideas the Team Would Like to Use From This Paper:</h5>  </li>\n",
+    "        <li><h5>Problem: How can AI efficiently and accurately recognize handwritten characters from large datasets, considering variations in handwriting, font, and noise?</h5>  </li>\n",
+    "        <li><h5>Past Solution Ideas: Earlier approaches to document recognition often used hand-engineered feature extraction and pattern matching methods, which were limited in handling the complexity and diversity of real-world handwriting and document formats.</h5>  </li>\n",
+    "        <li><h5>Authors' Solution Ideas: The authors proposed using Convolutional Neural Networks (CNNs) with backpropagation for gradient-based learning to automatically extract features and learn from raw pixel data. This eliminated the need for manual feature engineering and allowed the system to learn patterns directly from the data.</h5>  </li>\n",
+    "        <li><h5>Future Promising Solution Ideas: The authors suggested future research should explore more advanced architectures and training techniques, including deeper networks and unsupervised learning, to further improve recognition accuracy and computational efficiency.</h5>  </li>\n",
+    "        <li><h5>Evaluation Ideas: The effectiveness of CNNs can be evaluated using datasets such as the MNIST database of handwritten digits. Key performance metrics include classification accuracy and the model’s ability to generalize across different handwriting styles.</h5>  </li>\n",
+    "        <li><h5>Ideas the Team Would Like to Use From This Paper: Our team is interested in utilizing CNN architectures to automatically extract and recognize features from handwritten text, particularly by experimenting with deeper network structures to enhance accuracy on varied handwriting styles.</h5>  </li>\n",
     "    </ul>\n",
-    "    <li style=\"color:maroon\"><h4><bf>Paper reference in IEEE or ACM format, citations</bf></h4></li>\n",
+    "    <li style=\"color:maroon\"><h4><bf>A. Fateh, R.T. Birgani, M. Fateh, and V. Abolghasemi. 2024. Advancing Multilingual Handwritten Numeral Recognition With Attention-Driven Transfer Learning. IEEE Access, 12, pp. 41381-41395. https://doi.org/10.1109/ACCESS.2024.3378598, 7 citations (Scopus).</bf></h4></li>\n",
     "    <ul>\n",
-    "        <li><h5>Problem:</h5>  </li>\n",
-    "        <li><h5>Past Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Authors' Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Future Promising Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Evaluation Ideas:</h5>  </li>\n",
-    "        <li><h5>Ideas the Team Would Like to Use From This Paper:</h5>  </li>\n",
+    "        <li><h5>Problem: How can AI systems efficiently recognize handwritten numerals across multiple languages, given the varying shapes and styles of numerals in different scripts?</h5>  </li>\n",
+    "        <li><h5>Past Solution Ideas: Previous solutions to numeral recognition typically relied on standard machine learning techniques such as convolutional neural networks (CNNs) and basic transfer learning. However, these approaches often struggled with recognizing numerals in different languages due to limited adaptability.</h5>  </li>\n",
+    "        <li><h5>Authors' Solution Ideas: The authors proposed the use of attention-driven transfer learning to enhance the model’s ability to recognize numerals in multiple languages. This method allowed the model to focus on important features in the input, improving recognition across diverse scripts. Transfer learning enabled the model to leverage knowledge from pre-trained models on one language and apply it to another, reducing the need for large, language-specific datasets.</h5>  </li>\n",
+    "        <li><h5>Future Promising Solution Ideas: The authors suggested exploring reinforcement learning techniques to further improve the model's ability to generalize across new languages and scripts that were not present during the initial training.</h5>  </li>\n",
+    "        <li><h5>Evaluation Ideas: The proposed method was evaluated using multilingual numeral datasets, with performance metrics such as accuracy, precision, recall, and F1-score. The authors also compared their model to traditional CNN-based approaches to highlight its improved adaptability.</h5>  </li>\n",
+    "        <li><h5>Ideas the Team Would Like to Use From This Paper: Our team is interested in applying attention mechanisms to enhance their handwriting recognition system, particularly in adapting to multiple writing styles and languages using transfer learning techniques.</h5>  </li>\n",
     "    </ul>\n",
-    "<li style=\"color:maroon\"><h4><bf>Paper reference in IEEE or ACM format, citations</bf></h4></li>\n",
+    "<li style=\"color:maroon\"><h4><bf>U.-H. Kim, Y. Hwang, S.-K. Lee, and J.-H. Kim. 2023. Writing in the Air: Unconstrained Text Recognition from Finger Movement Using Spatio-Temporal Convolution. IEEE Transactions on Artificial Intelligence, 4 (6), pp. 1386-1398. https://doi.org/10.1109/TAI.2022.3212981, 11 citations (Scopus).</bf></h4></li>\n",
     "    <ul>\n",
-    "        <li><h5>Problem:</h5>  </li>\n",
-    "        <li><h5>Past Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Authors' Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Future Promising Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Evaluation Ideas:</h5>  </li>\n",
-    "        <li><h5>Ideas the Team Would Like to Use From This Paper:</h5>  </li>\n",
+    "        <li><h5>Problem: How can AI systems accurately recognize unconstrained text written in the air using finger movements, given the challenges of capturing complex spatio-temporal patterns from 3D gestures?</h5>  </li>\n",
+    "        <li><h5>Past Solution Ideas: Previous methods for text recognition focused primarily on 2D inputs, such as handwritten or scanned text, relying on techniques like optical character recognition (OCR) and simple motion tracking. These approaches were limited in their ability to process and recognize text written in 3D space.</h5>  </li>\n",
+    "        <li><h5>Authors' Solution Ideas: The authors introduced a spatio-temporal convolutional network (ST-CNN) to recognize text written in the air using finger movements. The proposed method effectively captures both spatial and temporal information from the finger's trajectory, allowing for more accurate recognition of unconstrained writing in 3D space.</h5>  </li>\n",
+    "        <li><h5>Future Promising Solution Ideas: The authors suggested future work could explore incorporating deep reinforcement learning techniques to improve the system’s adaptability to different writing speeds, gestures, and environmental conditions.</h5>  </li>\n",
+    "        <li><h5>Evaluation Ideas: The system was evaluated on datasets consisting of 3D finger movement patterns, and the performance was measured using metrics such as accuracy, precision, and recognition rate. The results were compared to traditional gesture recognition systems, demonstrating superior performance in recognizing complex text patterns.</h5>  </li>\n",
+    "        <li><h5>Ideas the Team Would Like to Use From This Paper: The team is interested in applying spatio-temporal convolutional networks (ST-CNNs) to recognize handwriting or gestures in various applications, potentially expanding to 3D space for unconstrained text input recognition.</h5>  </li>\n",
     "    </ul>\n",
-    "    <li style=\"color:maroon\"><h4><bf>Paper reference in IEEE or ACM format, citations</bf></h4></li>\n",
+    "    <li style=\"color:maroon\"><h4><bf>D. Coquenet, C. Chatelain, T. Paquet. 2023. DAN: A Segmentation-Free Document Attention Network for Handwritten Document Recognition. IEEE Transactions on Pattern Analysis and Machine Intelligence, 45 (7), pp. 8227-8243. https://doi.org/10.1109/TPAMI.2023.3235826, 42 citations (Scopus).</bf></h4></li>\n",
     "    <ul>\n",
-    "        <li><h5>Problem:</h5>  </li>\n",
-    "        <li><h5>Past Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Authors' Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Future Promising Solution Ideas:</h5>  </li>\n",
-    "        <li><h5>Evaluation Ideas:</h5>  </li>\n",
-    "        <li><h5>Ideas the Team Would Like to Use From This Paper:</h5>  </li>\n",
+    "        <li><h5>Problem: How can AI systems efficiently recognize handwritten documents without requiring explicit segmentation of the text into characters or words, given the variability in handwriting styles and document formats?</h5>  </li>\n",
+    "        <li><h5>Past Solution Ideas: Traditional handwritten document recognition methods often relied on explicit segmentation techniques, dividing text into characters or words before applying recognition algorithms. These methods struggled with segmentation errors and were limited in handling complex document structures.</h5>  </li>\n",
+    "        <li><h5>Authors' Solution Ideas: The authors proposed a Document Attention Network (DAN), a segmentation-free approach that uses attention mechanisms to focus on relevant parts of the document without needing to segment the text. This method improves recognition accuracy by directly processing the document as a whole, allowing the model to capture both local and global contextual information.</h5>  </li>\n",
+    "        <li><h5>Future Promising Solution Ideas: The authors suggested exploring the integration of DAN with other deep learning techniques like transformer models to further enhance the system's ability to handle highly diverse and complex document layouts.</h5>  </li>\n",
+    "        <li><h5>Evaluation Ideas: The DAN model was evaluated on various public handwritten document datasets, using performance metrics such as character error rate (CER) and word error rate (WER). The results showed that the model outperformed segmentation-based methods in both accuracy and robustness.</h5>  </li>\n",
+    "        <li><h5>Ideas the Team Would Like to Use From This Paper: The team is interested in applying attention-based models, like DAN, to improve the recognition accuracy in handwritten document recognition without relying on explicit segmentation, potentially integrating the model with transformer architectures for enhanced performance.</h5>  </li>\n",
     "    </ul>\n",
     "    <li style=\"color:maroon\">...at least one paper from a SCOPUS referenced publication per team member</li>\n",
     "</ul>"
@@ -170,10 +170,10 @@
     "        <li><h5>Helpful information/code/ideas/examples:The MNIST database provides a large dataset of images of handwritten digits, standardized in size and centered in a fixed size image, making it ideal for developing and testing machine learning models for handwriting recognition. The database includes detailed file formats and guidelines for preprocessing images, which can help in setting up the data for training models effectively.</h5>  </li>\n",
     "        <li><h5>What the team would like to use from this resource:Our team plans to use the MNIST dataset for training and validating our handwriting recognition models. </h5>  </li>\n",
     "    </ul>\n",
-    "<li style=\"color:maroon\"><h4><bf>Informal source reference in IEEE or ACM format</bf></h4></li>\n",
+    "<li style=\"color:maroon\"><h4><bf>Step-by-step Handwriting Words Recognition With PyTorch. Towards AI. https://towardsai.net/p/machine-learning/step-by-step-handwriting-words-recognition-with-pytorch</bf></h4></li>\n",
     "    <ul>\n",
-    "        <li><h5>Helpful information/code/ideas/examples:</h5>  </li>\n",
-    "        <li><h5>What the team would like to use from this resource:</h5>  </li>\n",
+    "        <li><h5>Helpful information/code/ideas/examples: This tutorial provides a comprehensive guide on how to develop handwriting recognition models using PyTorch. It includes instructions on preprocessing the data, applying data augmentation techniques like random brightness and rotation, and building a CNN-based model. It also introduces the use of CTC (Connectionist Temporal Classification) loss, which is ideal for handling input and output sequences of different lengths in handwriting recognition tasks.</h5>  </li>\n",
+    "        <li><h5>What the team would like to use from this resource: The team plans to implement the data augmentation techniques and CNN architecture outlined in this tutorial to improve the model's performance and accuracy. Additionally, we intend to use the CTC loss function to handle variable-length sequences in our handwriting recognition project.</h5>  </li>\n",
     "    </ul>\n",
     "    ...\n",
     "</ul>"
@@ -261,6 +261,34 @@
     "        </th>\n",
     "    </tr>\n",
     "    <tr style=\"text-align:left\">\n",
+    "        <th>Junghwan Bae</th>\n",
+    "        <th><ul>\n",
+    "            <li>Publications analyzed: Advancing Multilingual Handwritten Numeral Recognition With Attention-Driven Transfer Learning</li>\n",
+    "            <li>Gather the information and write Proposal</li>\n",
+    "            <li> Informal resources analyzed: Step-by-step Handwriting Words Recognition With PyTorch\n",
+    "            </li>\n",
+    "            </ul>\n",
+    "        </th>\n",
+    "    </tr>\n",
+    "    <tr style=\"text-align:left\">\n",
+    "        <th>Harshit Bhatta</th>\n",
+    "        <th><ul>\n",
+    "            <li>task</li>\n",
+    "            <li>task</li>\n",
+    "            ...\n",
+    "            </ul>\n",
+    "        </th>\n",
+    "    </tr>\n",
+    "    <tr style=\"text-align:left\">\n",
+    "        <th>Sagar Basavaraju</th>\n",
+    "        <th><ul>\n",
+    "            <li>task</li>\n",
+    "            <li>task</li>\n",
+    "            ...\n",
+    "            </ul>\n",
+    "        </th>\n",
+    "    </tr>\n",
+    "    <tr style=\"text-align:left\">\n",
     "        <th>team member name</th>\n",
     "        <th><ul>\n",
     "            <li>task</li>\n",
@@ -279,14 +307,6 @@
    "source": [
     "<hr>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ffc4e2e-ca24-4005-b7ff-1ebb765b0a78",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
