--- a/HandwritingDetector_proposal_assignment1.ipynb
+++ b/HandwritingDetector_proposal_assignment1.ipynb
@@ -308,7 +308,7 @@
     "    <tr style=\"text-align:left\">\n",
     "        <th>Sagar Basavaraju</th>\n",
     "        <th><ul>\n",
-    "            <li>task</li>\n",
+    "            <li>Publications Analzy</li>\n",
     "            <li>task</li>\n",
     "            ...\n",
     "            </ul>\n",
