--- a/HandwritingDetector_proposal_assignment1.ipynb
+++ b/HandwritingDetector_proposal_assignment1.ipynb
@@ -308,8 +308,11 @@
     "    <tr style=\"text-align:left\">\n",
     "        <th>Sagar Basavaraju</th>\n",
     "        <th><ul>\n",
-    "            <li>Publications Analzy</li>\n",
-    "            <li>task</li>\n",
+    "            <li>Publications Analzyzed :A. Mohamed, “Handwritten Digit Recognition: A Beginner’s Guide - Abdelrahman Mohamed - Medium,” Medium, Oct. 20, 2023.   </li>\n",
+    "            <li> Defined preprocessing techniques utilizing normalizing function to avoid discrepencies and biases within the data and utilized different platform for digit recoginizer such as Tensorflow,keras and Pandas.</li>\n",
+    "            <li>\n",
+    "            A. Mohamed, “Handwritten Digit Recognition: A Beginner’s Guide - Abdelrahman Mohamed - Medium,” Medium, Oct. 20, 2023.  Utilized confultions networks to describe how the 3D array and hidden layers can be used for more efficiency rather than traditional nerual networks and used pooling layer to help reduce featuree reduction  \n",
+    "            </li>\n",
     "            ...\n",
     "            </ul>\n",
     "        </th>\n",
