--- a/HandwritingDetector_proposal_assignment1.ipynb
+++ b/HandwritingDetector_proposal_assignment1.ipynb
@@ -241,9 +241,9 @@
     "        </th>\n",
     "    </tr>\n",
     "    <tr style=\"text-align:left\">\n",
-    "        <th>team member name</th>\n",
+    "        <th>Sagar Basavaraju</th>\n",
     "        <th><ul>\n",
-    "            <li>task, time estimate</li>\n",
+    "            <li>Set Up Keras and pytorch </li>\n",
     "            <li>task, time estimate</li>\n",
     "            ...\n",
     "            </ul>\n",
