Write 2nd and 3rd submission

--- a/HandwritingDetector_proposal_assignment1.ipynb
+++ b/HandwritingDetector_proposal_assignment1.ipynb
@@ -255,6 +255,44 @@
     "            </ul>\n",
     "        </th>\n",
     "    </tr>\n",
+    "    <tr style=\"text-align:left\">\n",
+    "        <th>Junghwan Bae</th>\n",
+    "        <th><ul>\n",
+    "            <li>Investigate the structure and characteristics of the multilingual numeral dataset, focusing on variations in numerals across different languages and scripts, 3 hours (Week 1).</li>\n",
+    "            <li>Set up a Python environment with TensorFlow/Keras for transfer learning and attention mechanism integration, 2 hours (Week 1).</li>\n",
+    "            <li>Implement data loading and preprocessing for the multilingual numeral dataset, including resizing and normalization for model input, 4 hours (Week 2).</li>\n",
+    "            <li>Design and implement a CNN model with basic attention mechanisms for initial numeral recognition trials, 6 hours (Week 2).</li>\n",
+    "            <li>Train the CNN model on a subset of the dataset to evaluate basic performance on multilingual numeral recognition, 5 hours (Week 3).</li>\n",
+    "            <li>Evaluate the model on a validation set, calculate performance metrics like accuracy and identify potential issues, 3 hours (Week 3).</li>\n",
+    "            <li>Review recent journal papers and research on multilingual numeral recognition, including techniques proposed by Fateh et al., 5 hours (Week 3).</li>\n",
+    "            <li>Document progress and initial challenges, particularly related to handling different numeral scripts and the attention mechanism, 4 hours (Week 3).</li>\n",
+    "            </ul>\n",
+    "        </th>\n",
+    "        <th><ul>\n",
+    "            <li>Apply advanced data augmentation techniques, including script-specific transformations (e.g., contrast adjustments, flipping), to improve model accuracy, 3 hours (Week 4).</li>\n",
+    "            <li>Refine the CNN model by integrating deeper attention layers and adjusting network depth to better handle script diversity, 4 hours (Week 4).</li>\n",
+    "            <li>Tune key hyperparameters, such as learning rate and dropout rates, through systematic trials, 3 hours (Week 5).</li>\n",
+    "            <li>Evaluate the refined model performance on the validation data, focusing on accuracy, loss, and multilingual script handling, 4 hours (Week 5).</li>\n",
+    "            <li>Analyze common misclassifications and propose improvements to enhance recognition of difficult numerals and scripts, 3 hours (Week 6).</li>\n",
+    "            <li>Document final results, lessons learned, and suggestions for future improvements, particularly regarding further attention module refinements, 5 hours (Week 6).</li>\n",
+    "            </ul>\n",
+    "        </th>\n",
+    "    </tr>\n",
+    "    <tr style=\"text-align:left\">\n",
+    "        <th>team member name</th>\n",
+    "        <th><ul>\n",
+    "            <li>task, time estimate</li>\n",
+    "            <li>task, time estimate</li>\n",
+    "            ...\n",
+    "            </ul>\n",
+    "        </th>\n",
+    "        <th><ul>\n",
+    "            <li>task, time estimate</li>\n",
+    "            <li>task, time estimate</li>\n",
+    "            ...\n",
+    "            </ul>\n",
+    "        </th>\n",
+    "    </tr>\n",
     "</table>"
    ]
   },
@@ -326,6 +364,7 @@
     "            </ul>\n",
     "        </th>\n",
     "    </tr>\n",
+    "    \n",
     "</table>"
    ]
   },
