Update 2nd and 3rd submission

--- a/HandwritingDetector_proposal_assignment1.ipynb
+++ b/HandwritingDetector_proposal_assignment1.ipynb
@@ -259,7 +259,7 @@
     "        <th>Junghwan Bae</th>\n",
     "        <th><ul>\n",
     "            <li>Investigate the structure and characteristics of the multilingual numeral dataset, focusing on variations in numerals across different languages and scripts, 3 hours (Week 1).</li>\n",
-    "            <li>Set up a Python environment with TensorFlow/Keras for transfer learning and attention mechanism integration, 2 hours (Week 1).</li>\n",
+    "            <li>Set up a Python environment with PyTorch for transfer learning and attention mechanism integration, 2 hours (Week 1).</li>\n",
     "            <li>Implement data loading and preprocessing for the multilingual numeral dataset, including resizing and normalization for model input, 4 hours (Week 2).</li>\n",
     "            <li>Design and implement a CNN model with basic attention mechanisms for initial numeral recognition trials, 6 hours (Week 2).</li>\n",
     "            <li>Train the CNN model on a subset of the dataset to evaluate basic performance on multilingual numeral recognition, 5 hours (Week 3).</li>\n",
