--- a/HandwritingDetector_proposal_assignment1.ipynb
+++ b/HandwritingDetector_proposal_assignment1.ipynb
@@ -244,22 +244,28 @@
     "        <th>Sagar Basavaraju</th>\n",
     "        <th><ul>\n",
     "            <li>\n",
-    "             . Review the MNIST Databased and the dataset and review documentation - Week 1 \n",
-    "             . Set Up Keras and pytorch IDE and install specifc libraries such as Pandas,Numpy, and Matplotlib. - 2 to 3 hours  - Week 2 \n",
-    "             . Set up preprocessing and Normalizing functions to standardize the data and make more efficient changes to avoid discrpencies within the data and Utilizing processes such as Batching,caching and prefetching the loading the data into memory for efficient data retrieval. week 3\n",
+    "Review the MNIST Databased and the dataset and review documentation - Week 1 \n",
+    "Set Up Keras and pytorch IDE and install specifc libraries such as Pandas,Numpy, and Matplotlib. - 2 to 3 hours  - Week 2 \n",
+    "Set up preprocessing and Normalizing functions to standardize the data and make more efficient changes to avoid discrpencies within the data and Utilizing processes such as Batching,caching and prefetching the loading the data into memory for efficient data retrieval. week 3\n",
     "              </li>\n",
     "            ...\n",
     "            <li>\n",
-    "            implement Training and testing sets while utilizing a training model to load data and characterize it using convolusional nueral networks and Week 3\n",
-    "           Define the layers of your CNN model, such as convolutional layers, activation functions (e.g., ReLU), and pooling layers.\n",
-    "            Week 4 - Fit the model to the training data and specify the number of epochs.\n",
-    "            Week 5 : Create a confusion matrix to visualize classification performance.\n",
-    "            Experiment with different hyperparameters (learning rate, batch size, number of layers) to improve performance.\n",
     "            </li>\n",
     "            </ul>\n",
     "        </th>\n",
-    "        <th><ul>\n",
-    "            <li>task, time estimate</li>\n",
+    "        <th>\n",
+    "        <ul>\n",
+    "<li>\n",
+    "implement Training and testing sets while utilizing a training model to load data and characterize it using convolusional nueral networks and Week 3\n",
+    "\n",
+    " Define the layers of your CNN model, such as convolutional layers, activation functions (e.g., ReLU), and pooling layers.\n",
+    "\n",
+    "Week 4 - Fit the model to the training data and specify the number of epochs.\n",
+    "\n",
+    "Week 5 : Create a confusion matrix to visualize classification performance.\n",
+    "\n",
+    "Experiment with different hyperparameters (learning rate, batch size, number of layers) to improve performance.\n",
+    "</li>\n",
     "            <li>task, time estimate</li>\n",
     "            ...\n",
     "            </ul>\n",
