--- a/HandwritingDetector_proposal_assignment1.ipynb
+++ b/HandwritingDetector_proposal_assignment1.ipynb
@@ -295,16 +295,16 @@
     "        </th>\n",
     "    </tr>\n",
     "    <tr style=\"text-align:left\">\n",
-    "        <th>team member name</th>\n",
+    "        <th>Ethan Homan</th>\n",
     "        <th><ul>\n",
-    "            <li>task, time estimate</li>\n",
-    "            <li>task, time estimate</li>\n",
+    "            <li>Develop a convolutional neural network (CNN) architecture tailored to recognize handwritten digits from the MNIST dataset. This involves selecting the appropriate layers (e.g., convolutional layers, activation functions, pooling layers), setting up the network topology, and initializing parameters., 20 hours</li>\n",
+    "            <li>Execute the training process of the CNN using the MNIST dataset. This includes setting up data loaders, defining the training loop, adjusting learning rates, and applying techniques like batch normalization and dropout to prevent overfitting. Monitor training progress through loss and accuracy metrics, 10 hours</li>\n",
     "            ...\n",
     "            </ul>\n",
     "        </th>\n",
     "        <th><ul>\n",
-    "            <li>task, time estimate</li>\n",
-    "            <li>task, time estimate</li>\n",
+    "            <li>Refine the model by adjusting hyperparameters (e.g., learning rate, number of epochs), experimenting with different optimizer settings, and possibly expanding the dataset with data augmentation techniques to enhance the model’s ability to generalize better on unseen data, 15 hours</li>\n",
+    "            <li>Integrate the trained model with a GUI to allow users to input handwritten digits and receive predictions in real-time. This will involve programming the interface, likely using a framework like Tkinter or PyQt, and ensuring the model’s outputs are correctly displayed to the end-user., 10 hours</li>\n",
     "            ...\n",
     "            </ul>\n",
     "        </th>\n",
