Update Sagar works

--- a/Handwriting Detector_project_submission_2_FINAL_VER.ipynb
+++ b/Handwriting Detector_project_submission_2_FINAL_VER.ipynb
@@ -177,9 +177,6 @@
     "    <ul>\n",
     "        <li><h5>Helpful information/code/ideas/examples: </h5> StatQuest with Josh Starmer, \"Neural Networks Part 8: Image Classification with Convolutional Neural Networks (CNNs),\" YouTube, Apr. 12, 2021. [Online]. Available: https://www.youtube.com/watch?v=HGwBXDKFk9I \n",
     "        <p>PyTorch Official Documentation, \"Transfer Learning Tutorial,\" Jan. 2024. [Online]. Available: https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html</p> </li>\n",
-    "        <li><h5> \n",
-    "    Utilizing Pandas to read CSV files and creating a dataset for the pytorch model through using Pytorch DatSet class the getitem method and transform functions to a compatabilities for our pytorch model. Required to create both train/validation sets to get a performance meausre of how your model is behaving and plotting the models and data points of the data set: </h5>  </li>\n",
-    "    <li><h5> I believe the team should use the Creating the Dataset class pytorch model to help load our CSV files and convert the file into a usable data that is compatiable to pytorch and using the getitem and img_df method to extract our greyscale image and using the transform from nn.transform module in pytorch to help as well with converting our data.</h5>  </li>\n",
     "        <li><h5>What the team would like to use from this resource: </h5> \n",
     "        <p>StatQuest with Josh Starmer, \"Neural Networks Part 8: Image Classification with Convolutional Neural Networks (CNNs)\": Our team who are plans to use the clear explanations and step-by-step code examples from this video to improve our understanding and implementation of CNNs in our numeral recognition model. Specifically, we will adopt the techniques discussed for designing effective convolutional and pooling layers, which are essential for feature extraction and reducing overfitting in our model. The insights into handling common image classification challenges will also guide us in optimizing our model's performance.</p> \n",
     "        <p>PyTorch Official Documentation, \"Transfer Learning Tutorial\": Our team member who are using PyTorch intend to leverage the tutorial's practical guide on applying transfer learning to our project. The example of using pre-trained models and fine-tuning them for a new task will help us efficiently train our numeral recognition model without needing extensive training data. We will use this resource to set up our transfer learning workflow and to understand how to customize pre-trained networks for recognizing numerals across multiple languages.</p> \n",
@@ -190,8 +187,18 @@
     "        <li><h5>Helpful information/code/ideas/examples:The content broadly discusses organizing and processing data, constructing neural networks within the PyTorch framework, and the key considerations for the preprocessing and training phases. </h5>  </li>\n",
     "        <li><h5>What the team would like to use from this resource:From this resource, the team would like to adopt the structured approach to data handling and model construction detailed in the tutorial. Specifically, we plan to utilize the methods described for preprocessing images and setting up efficient data loaders, which are crucial for handling large datasets effectively.</h5>  </li>\n",
     "    </ul>\n",
-    "    ...\n",
-    "</ul>"
+    "<li style=\"color:maroon\"><h4><bf>Informal source reference in IEEE or ACM format</bf></h4></li>\n",
+    "    <ul>\n",
+    "        <li><h5>Helpful information/code/ideas/examples:</h5>  </li>\n",
+    "        <li><h5>What the team would like to use from this resource:</h5>  </li>\n",
+    "    </ul>\n",
+    "</ul>\n",
+    " <li style=\"color:maroon\"><h4><bf>Informal source reference in IEEE or ACM format</bf></h4></li>\n",
+    "    <ul>\n",
+    "        <li><h5> \n",
+    "    Utilizing Pandas to read CSV files and creating a dataset for the pytorch model through using Pytorch DatSet class the getitem method and transform functions to a compatabilities for our pytorch model. Required to create both train/validation sets to get a performance meausre of how your model is behaving and plotting the models and data points of the data set: </h5>  </li>\n",
+    "        <li><h5> I believe the team should use the Creating the Dataset class pytorch model to help load our CSV files and convert the file into a usable data that is compatiable to pytorch and using the getitem and img_df method to extract our greyscale image and using the transform from nn.transform module in pytorch to help as well with converting our data.</h5>  </li>\n",
+    "    </ul>"
    ]
   },
   {
