Add file via upload"

--- a/teamname_project_submission_2 (2).ipynb
+++ b/teamname_project_submission_2 (2).ipynb
@@ -1272,13 +1272,7 @@
     "<li style=\"color:maroon\"><h4><bf>Informal source reference in IEEE or ACM format</bf></h4></li>\n",
     "    <ul>\n",
     "        <li><h5> \n",
-    "    Utilizing Pandas to read CSV files and creating a dataset for the pytorch model through using Pytorch DatSet class the getitem method and transform functions to a compatabilities for our pytorch model. Required to create both train/validation sets to get a performance meausre of how your model is behaving and plotting the models and data points of the data set: \n",
-    "\n",
-    "    \n",
-    "\n",
-    "      \n",
-    "\n",
-    "</h5>  </li>\n",
+    "    Utilizing Pandas to read CSV files and creating a dataset for the pytorch model through using Pytorch DatSet class the getitem method and transform functions to a compatabilities for our pytorch model. Required to create both train/validation sets to get a performance meausre of how your model is behaving and plotting the models and data points of the data set: </h5>  </li>\n",
     "        <li><h5> I believe the team should use the Creating the Dataset class pytorch model to help load our CSV files and convert the file into a usable data that is compatiable to pytorch and using the getitem and img_df method to extract our greyscale image and using the transform from nn.transform module in pytorch to help as well with converting our data.</h5>  </li>\n",
     "    </ul>\n",
     "<li style=\"color:maroon\"><h4><bf>Informal source reference in IEEE or ACM format</bf></h4></li>\n",
